// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Alert /> should render 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessibilityRole="alert"
    contrastType="lowContrast"
    data-blade-component="alert"
    intent="neutral"
    isDesktop={false}
    isFullWidth={false}
    style={
      Array [
        Object {
          "alignItems": "flex-start",
          "backgroundColor": "hsla(216, 15%, 54%, 0.09)",
          "borderColor": "hsla(216, 15%, 54%, 0.32)",
          "borderRadius": 4,
          "borderStyle": "solid",
          "borderWidth": 1,
          "boxSizing": "border-box",
          "display": "flex",
          "flexDirection": "row",
          "maxWidth": 584,
          "paddingBottom": 12,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
          "textAlign": "left",
        },
      ]
    }
    textAlign="left"
  >
    <View
      data-blade-component="base-box"
      display="flex"
      style={
        Array [
          Object {
            "display": "flex",
            "marginTop": 0,
          },
        ]
      }
    >
      <RNSVGSvgView
        accessibilityElementsHidden={true}
        align="xMidYMid"
        bbHeight="16px"
        bbWidth="16px"
        data-blade-component="icon"
        fill="none"
        focusable={false}
        height="16px"
        importantForAccessibility="no-hide-descendants"
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Array [
              Object {},
            ],
            Object {
              "flex": 0,
              "height": 16,
              "width": 16,
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
        width="16px"
      >
        <RNSVGGroup
          fill={null}
          propList={
            Array [
              "fill",
            ]
          }
        >
          <RNSVGPath
            d="M12 11C12.5523 11 13 11.4477 13 12V16C13 16.5523 12.5523 17 12 17C11.4477 17 11 16.5523 11 16V12C11 11.4477 11.4477 11 12 11Z"
            fill={4282603381}
            propList={
              Array [
                "fill",
              ]
            }
          />
          <RNSVGPath
            d="M12 7C11.4477 7 11 7.44772 11 8C11 8.55228 11.4477 9 12 9H12.01C12.5623 9 13.01 8.55228 13.01 8C13.01 7.44772 12.5623 7 12.01 7H12Z"
            fill={4282603381}
            propList={
              Array [
                "fill",
              ]
            }
          />
          <RNSVGPath
            clipRule={0}
            d="M1 12C1 5.92487 5.92487 1 12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12ZM12 3C7.02944 3 3 7.02944 3 12C3 16.9706 7.02944 21 12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3Z"
            fill={4282603381}
            fillRule={0}
            propList={
              Array [
                "fill",
                "fillRule",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <View
      data-blade-component="base-box"
      style={
        Array [
          Object {
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "paddingLeft": 8,
            "paddingRight": 4,
          },
        ]
      }
    >
      <View
        data-blade-component="base-box"
        style={
          Array [
            Object {
              "marginTop": 0,
            },
          ]
        }
      >
        <Text
          color="surface.text.subtle.lowContrast"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="regular"
          lineHeight={50}
          style={
            Array [
              Object {
                "color": "hsla(216, 27%, 36%, 1)",
                "fontFamily": "Lato",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "400",
                "lineHeight": 16,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
            ]
          }
        >
          Currently you can only accept payments in international currencies using PayPal.
        </Text>
      </View>
    </View>
    <View
      data-blade-component="base-box"
      style={
        Array [
          Object {},
        ]
      }
    >
      <View
        accessibilityLabel="Dismiss alert"
        accessibilityRole="button"
        accessible={true}
        collapsable={false}
        contrast="low"
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "alignSelf": "center",
            },
          ]
        }
      >
        <RNSVGSvgView
          accessibilityElementsHidden={true}
          align="xMidYMid"
          bbHeight="16px"
          bbWidth="16px"
          data-blade-component="icon"
          fill="none"
          focusable={false}
          height="16px"
          importantForAccessibility="no-hide-descendants"
          meetOrSlice={0}
          minX={0}
          minY={0}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Array [
                Object {},
              ],
              Object {
                "flex": 0,
                "height": 16,
                "width": 16,
              },
            ]
          }
          vbHeight={24}
          vbWidth={24}
          width="16px"
        >
          <RNSVGGroup
            fill={null}
            propList={
              Array [
                "fill",
              ]
            }
          >
            <RNSVGPath
              d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
              fill={4288851646}
              propList={
                Array [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Alert /> should render positive intent and full width 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessibilityRole="alert"
    contrastType="lowContrast"
    data-blade-component="alert"
    intent="positive"
    isDesktop={false}
    isFullWidth={true}
    style={
      Array [
        Object {
          "alignItems": "flex-start",
          "backgroundColor": "hsla(155, 100%, 31%, 0.09)",
          "borderColor": "hsla(155, 100%, 31%, 0.32)",
          "borderRadius": 0,
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexDirection": "row",
          "maxWidth": "auto",
          "paddingBottom": 12,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 12,
          "textAlign": "left",
          "width": "100%",
        },
      ]
    }
    textAlign="left"
  >
    <View
      data-blade-component="base-box"
      display="flex"
      style={
        Array [
          Object {
            "display": "flex",
            "marginTop": 2,
          },
        ]
      }
    >
      <RNSVGSvgView
        accessibilityElementsHidden={true}
        align="xMidYMid"
        bbHeight="20px"
        bbWidth="20px"
        data-blade-component="icon"
        fill="none"
        focusable={false}
        height="20px"
        importantForAccessibility="no-hide-descendants"
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Array [
              Object {},
            ],
            Object {
              "flex": 0,
              "height": 20,
              "width": 20,
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
        width="20px"
      >
        <RNSVGGroup
          fill={null}
          propList={
            Array [
              "fill",
            ]
          }
        >
          <RNSVGGroup
            clipPath="clip0_60_208"
          >
            <RNSVGPath
              d="M4.15845 7.14679C6.74812 4.11688 11.0222 3.1512 14.663 4.77343C15.1675 4.99821 15.7586 4.77147 15.9834 4.267C16.2082 3.76253 15.9815 3.17135 15.477 2.94657C11.0272 0.96385 5.80325 2.14413 2.6381 5.84735C-0.527049 9.55057 -0.879431 14.8946 1.77205 18.9813C4.42353 23.0681 9.44725 24.9241 14.1189 23.5429C18.7905 22.1616 21.9972 17.8716 22 13V12.07C22 11.5177 21.5523 11.07 21 11.07C20.4477 11.07 20 11.5177 20 12.07V12.9994C19.9977 16.9852 17.3741 20.4948 13.5518 21.6249C9.72957 22.7551 5.61926 21.2365 3.44986 17.8928C1.28047 14.5491 1.56878 10.1767 4.15845 7.14679Z"
              fill={4278224216}
              propList={
                Array [
                  "fill",
                ]
              }
            />
            <RNSVGPath
              d="M22.7071 4.70711C23.0976 4.31658 23.0976 3.68342 22.7071 3.29289C22.3166 2.90237 21.6834 2.90237 21.2929 3.29289L11 13.5858L8.70711 11.2929C8.31658 10.9024 7.68342 10.9024 7.29289 11.2929C6.90237 11.6834 6.90237 12.3166 7.29289 12.7071L10.2929 15.7071C10.6834 16.0976 11.3166 16.0976 11.7071 15.7071L22.7071 4.70711Z"
              fill={4278224216}
              propList={
                Array [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
          <RNSVGDefs>
            <RNSVGClipPath
              name="clip0_60_208"
            >
              <RNSVGRect
                fill={4294967295}
                height="24"
                propList={
                  Array [
                    "fill",
                  ]
                }
                width="24"
                x={0}
                y={0}
              />
            </RNSVGClipPath>
          </RNSVGDefs>
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <View
      data-blade-component="base-box"
      style={
        Array [
          Object {
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "paddingLeft": 12,
            "paddingRight": 4,
          },
        ]
      }
    >
      <View
        data-blade-component="base-box"
        style={
          Array [
            Object {
              "marginTop": 0,
            },
          ]
        }
      >
        <Text
          color="surface.text.subtle.lowContrast"
          data-blade-component="text"
          fontFamily="text"
          fontSize={100}
          fontStyle="normal"
          fontWeight="regular"
          lineHeight={100}
          style={
            Array [
              Object {
                "color": "hsla(216, 27%, 36%, 1)",
                "fontFamily": "Lato",
                "fontSize": 14,
                "fontStyle": "normal",
                "fontWeight": "400",
                "lineHeight": 20,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
            ]
          }
        >
          Currently you can only accept payments in international currencies using PayPal.
        </Text>
      </View>
    </View>
    <View
      data-blade-component="base-box"
      style={
        Array [
          Object {},
        ]
      }
    >
      <View
        accessibilityLabel="Dismiss alert"
        accessibilityRole="button"
        accessible={true}
        collapsable={false}
        contrast="low"
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "alignSelf": "center",
            },
          ]
        }
      >
        <RNSVGSvgView
          accessibilityElementsHidden={true}
          align="xMidYMid"
          bbHeight="20px"
          bbWidth="20px"
          data-blade-component="icon"
          fill="none"
          focusable={false}
          height="20px"
          importantForAccessibility="no-hide-descendants"
          meetOrSlice={0}
          minX={0}
          minY={0}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Array [
                Object {},
              ],
              Object {
                "flex": 0,
                "height": 20,
                "width": 20,
              },
            ]
          }
          vbHeight={24}
          vbWidth={24}
          width="20px"
        >
          <RNSVGGroup
            fill={null}
            propList={
              Array [
                "fill",
              ]
            }
          >
            <RNSVGPath
              d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
              fill={4288851646}
              propList={
                Array [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
  </View>
</View>
`;
